legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr17730-1.c-4.8.2-0.out.txt
pr17730-1.c:5:11: error: lvalue required as unary ‘&’ operand
 char *p = &'C';  
           ^
